k8s/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        ports:
        - containerPort: 8081
      #   volumeMounts:
      #   - name: jenkins-home
      #     mountPath: /var/jenkins_home
      # volumes:
      # - name: jenkins-home
      #   persistentVolumeClaim:
      #     claimName: jenkins-pvc

---
