k8s/spring1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  labels:
    app: frontend
spec:
  containers:
  - name: cont1
    image: rasitirmak/spring
    ports:
    - containerPort: 80
