k8s/deploymentspring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
  labels:
    app: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: springsvc
spec:
  selector:
    app: spring
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30036
