k8s/deploymentspring1.yaml
```yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-flask-deploy
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-flask
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-flask
        env: front-end
        version: v1
        test: coupling
    spec:
      containers:
      - name: web-flask-pod
        image: clarusway/cw_web_flask1
        ports:
        - containerPort: 5000
```
- Create a service inside the `demo` namespace.
```yaml
apiVersion: v1
kind: Service
metadata:
  name: web-flask-svc
  namespace: demo
  labels:
    app: web-flask
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 5000
    nodePort: 30036
  selector:
    env: front-end
```
