k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: test-ingress
namespace: development
spec:
rules:
 -host: 192.168.1.5
  http:
   paths: /
-backend:
serviceName: springapp
servicePort: 80
